@@ -1,3 +1,12 @@
+2011-11-26  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	PR libstdc++/51296
+	* testsuite/30_threads/thread/native_handle/typesizes.cc: Do not run
+	on alpha*-*-osf*.
+	* testsuite/30_threads/future/cons/constexpr.cc: Disable debug
+	symbols.
+	* testsuite/30_threads/shared_future/cons/constexpr.cc: Likewise.
+
 2011-11-23  François Dumont <fdumont@gcc.gnu.org>
 
 	PR libstdc++/41975
